# pySEMTools

./: .gitignore  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: check_unit_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml
doc/: conf.py  index.rst
doc/pages/: api.rst  full_api.rst  hdf.rst  io.rst  summary_api.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_notebooks/: 1-Direct_sampling.html  1-POD_from_pointclouds.html  1-datatypes_io.html  1-differentiation.html  1-interpolation_to_query_points.html  1-post_processing_mean_fields.html  1.1-interpolation_to_query_points_parallel.html  1.5-differentiation_torch.html  1d_data_processing.html  2-POD_fft_from_pointclouds.html  2-POD_fft_from_pointclouds.ipynb  2-UQ_of_velocity.html  2-element_interpolation.html  2-integration.html  2-sem_subdomains.html  3-UQ_of_temperature.html  3-data_compression.html  3-interpolation_from_2d_sem_mesh.html  4-Budgets.html  5-homogeneous_direction_averaging.html  5-structured_mesh.html  6-Stats_from_fld.html  6-interpolating_file_sequences.html  7-visualizing_pointclouds.html  8-mirroring_fields.html  derivation.html  interpolation.html  pod.html  pod_galerkin.html
docs/main/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
docs/pages/: adios2.html  api.html  catalyst.html  coef.html  datatypes.html  field.html  hdf.html  interpolation.html  io.html  msh.html  ppymech.html  probes.html
examples/: README.md
examples/1-datatypes_and_io/: 1-datatypes_io.ipynb
examples/10-mapping-grouping/: mappings.py  pattern_elem_group_averaging.py
examples/3-calculus_in_sem_mesh/: 1.5-differentiation_torch.ipynb  README.md  solver_2.py  solver_3.py
examples/4-interpolation/: 1.1-interpolation_to_query_points_parallel.ipynb  6-interpolating_file_sequences.ipynb  README.md
examples/5-reduced_order_modelling/: README.md
examples/5.5-reduced_order_modelling_channel/: 3-POD_fft_channel.py
examples/6-statistics/: 1-post_processing_mean_fields.ipynb  4-Budgets.ipynb  5-homogeneous_direction_averaging.ipynb  README.md
examples/7-solving_NS/: 1-lid_driven_cavity.py  2-2d_cylinder.py  README.md
examples/data/: cylinder_mesh0.f00000  lid_mesh0.f00000
pynektools/comm/: router.py
pynektools/datatypes/: coef.py  field.py  msh.py  utils.py
pynektools/interpolation/: interpolator.py  mesh_to_mesh.py  pointclouds.py  probes.py  sem.py  tensor_sem.py  utils.py
pynektools/io/: stream.py  utils.py
pynektools/postprocessing/: plotting.py
pynektools/ppymech/: neksuite.py  parallel_io.py
pynektools/rom/: io_help.py  logger.py  math_ops.py  mpi_ops.py  mpi_spSVD.py  pod.py
pysemtools/: __init__.py
pysemtools/cli/: __init__.py  extract_subdomain.py  index_files.py  visnek.py
tests/: test_autograd.py  test_examples.py  test_interpolator.py  test_probes.py
(+103 files in other folders)
