[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysemtools"
version = "1.1.0"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "scipy",
    "pymech",
    "tqdm",
    "mpi4py",
]

[project.urls]
Repository = "https://github.com/ExtremeFLOW/pySEMTools.git"
Issues = "https://github.com/ExtremeFLOW/pySEMTools/issues"

[project.optional-dependencies]
test = [
    "pysemtools[torch]",
    "pytest",
    "pytest-json-report",
    "pympler",
    "memory_profiler",
    "h5py",
    "rtree",
    "jupyter", 
    "matplotlib",
    "pyevtk",
]
dev = [
    "pre-commit",
]
torch = [
    "torch",
    "torchvision",
    "torchaudio"
]
all = [
    "pysemtools[test]",
    "pysemtools[dev]"
]

[project.scripts]
pysemtools_index-files = "pysemtools.cli.index_files:main"
pysemtools_visnek = "pysemtools.cli.visnek:main"
pysemtools_extract_subdomain = "pysemtools.cli.extract_subdomain:main"
